# griffin

./: .gitignore  CMakeLists.txt  CUDA_PATTERNS_HANDBOOK English version.md  CUDA_PATTERNS_HANDBOOK.md  README.md  record.md
benchmark/: K.npy  Q.npy  V.npy  W_k.npy  W_o.npy  W_q.npy  W_v.npy  X.npy  attention_weights.npy  manual_output.npy
include/: utils.h
playbook/phase1/: 00_stage1_overview.md  01_tasks.md
src/: cpu_ops.cpp  kernel.cu  main.cpp  utils.cpp  utils.h
